# OSS-translator

./: .gitignore  README.md  pyproject.toml  requirements.txt  translator.py
